# rules_rust

./: WORKSPACE
.bazelci/: presubmit.yml
docs/: BUILD  index.md  rust_repositories.md
examples/: examples_deps.bzl
proto/: proto.bzl
proto/raze/remote/: byteorder-1.3.4.BUILD  bytes-0.4.12.BUILD  iovec-0.1.4.BUILD  libc-0.2.69.BUILD  protobuf-2.8.2.BUILD
rust/: BUILD.bazel  repositories.bzl  rust.bzl
rust/private/: rust.bzl  rustc.bzl
util/worker/: BUILD  worker.cc
worker/: BUILD  README.md  repositories.bzl  toolchain.bzl
