load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

package(default_visibility = ["//visibility:public"])

exports_files([
    "known_shas.bzl",
    "repositories.bzl",
    "rust.bzl",
    "defs.bzl",
    "toolchain.bzl",
])

toolchain_type(
    name = "toolchain",
)

bzl_library(
    name = "rules",
    srcs = glob(["**/*.bzl"]),
    deps = [
        "//rust/platform:rules",
        "//rust/private:rules",
    ],
)

bool_flag(
    name = "experimental-use-worker",
    build_setting_default = False,
)
